<resources>
    <string name="app_name">Consulte</string>

    <!--Dialogos-->
    <string name="dialog_title_sair">Messagem</string>
    <string name="dialog_message_sair">Você deseja terminar a sessão?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancelar">Cancelar</string>

    <!-- conteudo -->
    <string name="versao">Versão beta</string>
    <string name="forma_desenvolvimento">Desenvolvimento IFRN</string>

    <!--botões-->
    <string name="voltar">Voltar</string>
    <string name="finalizar_sessao">Finalizar sessão</string>
    <string name="cadastrar">Cadastrar agora</string>
    <string name="entrar">Confirmar</string>
    <string name="atualizar">Atualizar perfil</string>
    <string name="ir_login">Já sou usuário</string>
    <string name="ir_cadastro">Ainda não possui cadastro? Clique aqui!</string>

    <!--labels-->
    <string name="lbl_nome">Nome completo</string>
    <string name="lbl_senha">*****</string>
    <string name="lbl_nickname">Nickname</string>

    <!--descrições-->
    <string name="descricao_logomarca">Imagem da logomarca</string>
    <string name="descricao_voltar">Imagem com a tecla de voltar</string>
    <string name="descricao_default">Imagem do menu iniciar</string>

    <!--textos do menu inicial-->
    <string name="ico_pessoas">Pessoas</string>
    <string name="ico_prontuarios">Prontuários</string>
    <string name="ico_realocar_paciente">Realocar paciente</string>
    <string name="ico_editar_perfil">Editar perfil</string>
    <string name="ico_realizar_backup">Realizar backup</string>
    <string name="ico_faleconosco">Fale conosco</string>




</resources>