<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CadastrarActivity"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="@dimen/height_80"
        android:layout_height="@dimen/height_60"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/white"
        android:contentDescription="@string/descricao_voltar"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:textColor="@color/color_secundary"
        android:textSize="@dimen/texto_pequeno" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_80"
        android:contentDescription="@string/descricao_logomarca"
        app:srcCompat="@drawable/logo_consulte" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginStart="@dimen/margin_40"
        android:orientation="vertical"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/margin_20">

        <EditText
            android:id="@+id/nome_completo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            android:fontFamily="@font/normal_signika"
            android:autofillHints="name"
            android:inputType="text"
            android:maxLength="50"
            android:textColor="@color/color_secundary"
            android:textSize="@dimen/texto_medio"
            android:textColorHint="@color/color_secundary"
            android:hint="@string/lbl_nome">
        </EditText>

        <EditText
            android:autofillHints="username"
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            android:maxLength="20"
            android:fontFamily="@font/normal_signika"
            android:inputType="text"
            android:textColorHint="@color/color_secundary"
            android:textColor="@color/color_secundary"
            android:textSize="@dimen/texto_medio"
            android:hint="@string/lbl_nickname"/>

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            android:textColorHint="@color/color_secundary"
            android:maxLength="20"
            android:fontFamily="@font/normal_signika"
            android:textSize="@dimen/texto_medio"
            android:textColor="@color/color_secundary"
            android:inputType="textPassword"
            android:hint="@string/lbl_senha"
            android:autofillHints="password">
        </EditText>
    </LinearLayout>


    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_below="@+id/layout"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_40"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bck_primary"
        android:fontFamily="@font/normal_signika"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/texto_medio" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_40"
        android:fontFamily="@font/normal_signika"
        android:text="@string/versao"
        android:textAlignment="center"
        android:textColor="@color/color_secundary"
        android:textSize="@dimen/texto_normal" />
</RelativeLayout>