<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:contentDescription="Imagem da logomarca"
        app:srcCompat="@drawable/logo_consulte" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:fontFamily="@font/normal_signika"
        android:layout_marginTop="20dp"
        android:text="@string/forma_desenvolvimento"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/color_secundary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/normal_signika"
            android:text="@string/ir_login"
            android:textColor="#fff"
            android:textSize="12sp"
            android:background="@drawable/bck_primary"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/ir_cadastro"
            android:textSize="12sp"
            android:textAlignment="center"
            android:fontFamily="@font/normal_signika"
            android:textColor="@color/color_secundary"
            android:background="@drawable/bck_secundary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:text="@string/versao"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:fontFamily="@font/normal_signika"
        android:textColor="@color/color_secundary"
        android:textSize="16sp"
        tools:ignore="RtlCompat" />
</RelativeLayout>