<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_marginTop="10dp"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:textColor="@color/color_secundary"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="Imagem da logomarca"
        app:srcCompat="@drawable/logo_consulte"  />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="40dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/campo_nickname"
            android:maxLength="20"
            android:text="clemerson"
            android:fontFamily="@font/normal_signika"
            android:inputType="text"
            android:textColorHint="@color/color_secundary"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/color_secundary"
            android:textSize="12sp"
            android:hint="@string/lbl_nickname"/>


        <EditText
            android:id="@+id/campo_senha"
            android:textColorHint="@color/color_secundary"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/normal_signika"
            android:maxLength="20"
            android:textSize="12sp"
            android:text="12345"
            android:textColor="@color/color_secundary"
            android:inputType="textPassword"
            android:hint="@string/lbl_senha">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/entrar"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:fontFamily="@font/normal_signika"
        android:textColor="#fff"
        android:textSize="12sp"
        android:background="@drawable/bck_primary"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versao"
        android:fontFamily="@font/normal_signika"
        android:textColor="@color/color_secundary"
        android:textSize="16sp"
        android:textAlignment="center"/>

</LinearLayout>